--- a/ssfm-mgr-rest/src/main/resources/config/bootstrap.properties
+++ b/ssfm-mgr-rest/src/main/resources/config/bootstrap.properties
@@ -34,7 +34,7 @@ icap.data.datasource.maxActive=2
 
 #redis相关配置 （根据需要开启）
 # 是否启用Redis
-icap.data.redis.enabled=false
+icap.data.redis.enabled=true
 icap.data.redis.pool.max-active=100
 icap.data.redis.pool.max-idle=8
 icap.data.redis.pool.min-idle=0
