##SOCIALSEC-902 增加连表查询test

--- a/ssfm-mgr-rest/src/main/resources/config/bootstrap.properties
+++ b/ssfm-mgr-rest/src/main/resources/config/bootstrap.properties
@@ -48,7 +48,7 @@ icap.data.redis.password=chenadmin
 spring.jackson.default-property-inclusion=non_null
 
 # 启用/禁用注册中心
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
 
 
