--- a/ssfm-mgr-rest/src/main/resources/config/bootstrap.properties
+++ b/ssfm-mgr-rest/src/main/resources/config/bootstrap.properties
@@ -27,7 +27,7 @@ spring.profiles.active=${config.profile:dev}
 icap.data.datasource.enabled=true
 icap.data.datasource.url=jdbc\:mysql\://119.29.109.156\:3306/test
 icap.data.datasource.username=chenes
-icap.data.datasource.password=Ces2311429!
+icap.data.datasource.password=*****
 icap.data.datasource.driverClassName=com.mysql.jdbc.Driver
 icap.data.datasource.validationQuery = select 1 FROM DUAL
 icap.data.datasource.maxActive=2
@@ -41,7 +41,7 @@ icap.data.redis.pool.min-idle=0
 icap.data.redis.port=6379
 icap.data.redis.pool.max-wait=-1
 icap.data.redis.host=119.29.109.156
-icap.data.redis.password=chenadmin
+icap.data.redis.password=****
 
 
 # 对象转为json字符串时不包含null字段
